fix(home/media/not-found): increase height of containers on these pages in order to remove the white space at the footer :lipstick:

--- a/src/app/_commons/footer/footer.component.css
+++ b/src/app/_commons/footer/footer.component.css
@@ -2,9 +2,10 @@
     background-color: rgb(43, 43, 43);
     height: 9rem;
     margin-top: 2rem;
-    width: 100vw;
-    position: relative;
+    position: sticky;
     bottom: 0;
+    left: 0;
+    right: 0;
 }
 .footer-columns {
     display: grid;
