--- a/src/app/_pages/not-found/not-found.component.css
+++ b/src/app/_pages/not-found/not-found.component.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     color: rgb(43, 43, 43);
-    height: 30rem;
+    height: 80vh;
 } 
 p {
     max-width: 45rem;
